# ohme_spanish_pvpc

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  test_main.py
charger/: _pvpc_conversions.py  client.py  model.py  tariffs.py  tariffs_test.py
pvpc/: fetch.py  model.py  test_fetch.py
